--- a/style.css
+++ b/style.css
@@ -1,7 +1,50 @@
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
 html {
   box-sizing: border-box;
 }
 body {
   margin: 0;
-  min-height: 100vh;
+  font-family: Abril Fatface, sans-serif;
+  background-color: whitesmoke;
+}
+h1 {
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  font-size: 40px;
+  letter-spacing: 4px;
+}
+/* loader */
+.loader {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgb(255, 255, 255, 0.8);
+}
+/* targeting an image that is a child of the class loader */
+.loader img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/* Image Container */
+.image-container {
+  margin: 10px 30%;
+}
+.image-container img {
+  width: 100%;
+  margin-top: 5px;
+}
+
+/* Media Query for Large Smartphone */
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 22px;
+  }
+  .image-container {
+    margin: 10px;
+  }
 }
